--- a/photogram/templates/home.html
+++ b/photogram/templates/home.html
@@ -3,9 +3,16 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+
 {% if user.is_authenticated %}
   Привет, {{ user.username }}!
   <p><a href="{% url 'logout' %}">Выйти</a></p>
+
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Добавить">
+  </form>
 
   <ul>
     {% for post in object_list %}
@@ -13,13 +20,10 @@
       <img src="{{ post.image.url}}" alt="{{ post.author }}" width="200">
     {% endfor %}
   </ul>
-  <a href="{% url 'add_post' %}">Создать пост</a>
-
-
-
 {% else %}
   <p>Вы не вошли</p>
   <a href="{% url 'login' %}">Войти</a>
   <a href="{% url 'signup' %}">Регистрация</a>
 {% endif %}
+
 {% endblock %}
