--- a/photogram/templates/base.html
+++ b/photogram/templates/base.html
@@ -3,11 +3,59 @@
 <head>
   <meta charset="utf-8">
   <title>{% block title %}Photogram{% endblock %}</title>
+  {% load static %}
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+        crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+
 </head>
 <body>
+  <header class="header">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <a href="{% url 'posts' %}">
+            <h1 class="logo">Photogram</h1>
+          </a>
+          
+          <div class="nav-menu">
+            {% if user.is_authenticated %}
+              <p class="nav-item">{{ user.username }}</p>
+              <button class="btn btn-dark nav-item">
+                <a href="{% url 'logout' %}">
+                  <i class="fas fa-sign-out-alt"></i>Выйти
+                </a>
+              </button> 
+            
+            {% else %}
+              <a href="{% url 'login' %}">
+                <input type="submit" class="btn btn-dark" value="Войти">
+              </a>
+
+                <a href="{% url 'signup' %}"><input type="submit" class="btn btn-dark" value="Регистрация">
+              </a>
+            {% endif %}
+          </div>
+          
+
+        </div>
+      </div>
+    </div>
+  </header>
   <main>
     {% block content %}
     {% endblock %}
   </main>
+
+  <footer class="blue">
+    <p>2021 ©Photogram</p>
+  </footer>
+
+  <script src="https://use.fontawesome.com/f6d634fa70.js"></script>
+
 </body>
 </html>
