--- a/photogram/templates/posts/post_update.html
+++ b/photogram/templates/posts/post_update.html
@@ -1,11 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container">
+  <div class="row">
+    <div class="col-lg-4 offset-lg-4">
+      <a class="back-href" href="{% url 'posts' %}">< Назад</a>
+      <form method="post" enctype="multipart/form-data" class="post-update">
+        <h2>Редактирование</h2>
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" class="btn btn-secondary" value="Отредактировать">
+      </form>
+    </div>
+  </div>
+</div>
 
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Отредактировать">
-  </form>
 
 {% endblock %}
