--- a/photogram/templates/posts/post_detail.html
+++ b/photogram/templates/posts/post_detail.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Пост {{ post.pk }} {% endblock %}
+
 {% block content %}
 <div class="container">
     <div class="row">
@@ -33,5 +35,4 @@
         </div>
     </div>
 </div>
-
 {% endblock %}
