--- a/photogram/templates/registration/signup.html
+++ b/photogram/templates/registration/signup.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %}Регистрация{% endblock %}
 
 {% block content %}
 <div class="container">
