--- a/photogram/templates/base.html
+++ b/photogram/templates/base.html
@@ -13,8 +13,8 @@
 
 
 </head>
-<body>
-  <header class="header">
+<body class="d-flex flex-column min-vh-100">
+  <header class="header ">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -50,13 +50,17 @@
       </div>
     </div>
   </header>
-  <main>
+  <main class="wrapper flex-grow-1">
     {% block content %}
     {% endblock %}
   </main>
 
-  <footer class="blue">
-    <p>2021 ©Photogram</p>
+  <footer class="blue navbar-fixed-bottom row-fluid">
+    <div class="navbar-inner">
+      <div class="container">
+        <p>2021 ©Photogram</p>
+      </div>
+    </div>
   </footer>
 
   <script src="https://use.fontawesome.com/f6d634fa70.js"></script>
