--- a/photogram/templates/registration/signup.html
+++ b/photogram/templates/registration/signup.html
@@ -9,7 +9,40 @@
       <form method="post" enctype="multipart/form-data" class="post-update">
         <h2>Регистрация</h2>
         {% csrf_token %}
-        {{ form.as_p }}
+        <input type="text" name="username" maxlength="150" autocapitalize="none" autocomplete="username"
+         autofocus="" required="" id="id_username" placeholder='Логин'>
+          <p class="help-text">Только буквы, цифры и @ /. / + / - / _.</p>
+        <input type="password" name="password1" autocomplete="new-password" required=""
+         id="id_password1" aria-autocomplete="list" placeholder='Пароль' class="mt-2"">
+         <input type="password" name="password2" autocomplete="new-password" required=""
+          id="id_password2" placeholder='Повторите пароль' class="mt-2">
+
+          {% if form.errors %}
+          <div class="alert alert-danger text-left">
+            {% for x in form.errors %}
+                {%if "__all__" in x %}
+                    -Неправильный логин или пароль
+                {%else%}
+                    {%if "username" in x %}
+                        -Пользователь с таким логином уже существует
+                        <br>
+                    {%endif%}
+                    {%if "password" in x %}
+                        -Пароли не совпадают
+                        <div class="alert alert-warning" role="alert">
+                            <p>Ваш пароль не может быть слишком похож на вашу другую личную информацию.</p>
+                            <p>Ваш пароль должен содержать не менее 8 символов.</p>
+                            <p>Ваш пароль не может быть обычным паролем.</p>
+                            <p>Ваш пароль не может быть полностью числовым.</p>
+                        </div>
+                        <br>
+                    {%endif%}
+
+                {%endif%}
+            {%endfor%}
+          </div>
+          {% endif %}
+
         <input type="submit" class="btn btn-primary" value="Зарегистирироваться">
         <p>Уже есть аккаунт? <a class="black-text" href="{% url 'signup' %}">Войти</a></p>
       </form>
